# shd45

./: .gitignore  shd45.cabal  untitled.cabal
.stack-work/install/x86_64-linux-ncurses6/lts-8.4/8.0.2/flag-cache/: untitled-0.1.0.0
patterns/: ForEq  forAx  forMP  forMP2  forMP3  help1  help2  help3
src/: Checker.hs  Expression.hs  Grammar.hi  Grammar.hs  Grammar.y  Main  Main.hi  Main.hs  Patterns.hs  Test.hs  Tokens.hi  Tokens.hs  Tokens.x
src/Sum/: Main.hs  SumPatterns.hs  Tokens.hs
