name:                 shd45
version:              0.1.0.0
synopsis:             
-- description:
-- license:
-- license-file:
homepage:             
author:               Albert
maintainer:           Albert1401@mail.ru
category:             
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable checker
  main-is:              Main.hs
  other-modules:        Grammar
                        , Checker
                        , Tokens
                        , Test
                        , Patterns
  -- other-extensions:
  build-depends:        base >= 4.7 && < 5
                      , array
                      , split
                      , unordered-containers
                      , mtl
                      , vector
                      , utf8-string
                      , bytestring
  hs-source-dirs:       src
  default-language:     Haskell2010


