name:                 untitled
version:              0.1.0.0
synopsis:             
-- description:
-- license:
-- license-file:
homepage:             
author:               Albert
maintainer:           Albert1401@mail.ru
category:             
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable untitled
  main-is:              Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:        base >= 4.7 && < 5
                      , array
  hs-source-dirs:       src
  default-language:     Haskell2010
